Bug 256233 - [ macOS, iOS ] ASSERTION FAILED: remoteWorkerProcesses().contains(process) in WebKit::WebProcessPool::removeFromRemoteWorkerProcesses
Summary: [ macOS, iOS ] ASSERTION FAILED: remoteWorkerProcesses().contains(process) in...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-02 15:51 PDT by Bri Harris
Modified: 2023-05-04 13:51 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bri Harris 2023-05-02 15:51:56 PDT
imported/w3c/web-platform-tests/xhr/XMLHttpRequest-withCredentials.any.html

is a flaky crash on macOS and iOS. 


HISTORY:

https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2FXMLHttpRequest-withCredentials.any.html
Comment 1 Alexey Proskuryakov 2023-05-03 08:58:18 PDT
rdar://104915398

 Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0  com.apple.JavaScriptCore	       0x1149e597e    WTFCrash
1  com.apple.WebKit        	       0x14719fbda    WTFCrashWithInfo(int, char const*, char const*, int)
2  com.apple.WebKit        	       0x148d88fce    WebKit::WebProcessPool::removeFromRemoteWorkerProcesses(WebKit::WebProcessProxy&)
3  com.apple.WebKit        	       0x148d90afe    WebKit::WebProcessProxy::disableRemoteWorkers(WebKit::RemoteWorkerType)
4  com.apple.WebKit        	       0x148f2c76c    WebKit::NetworkProcessProxy::remoteWorkerContextConnectionNoLongerNeeded(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)
5  com.apple.WebKit        	       0x14784be6a    auto void IPC::callMemberFunction<WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >&&)::'lambda'(auto&&...)::operator()<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >(auto&&...) const
6  com.apple.WebKit        	       0x14784bd94    decltype(std::declval<WebKit::NetworkProcessProxy>()(std::declval<WebKit::RemoteWorkerType>(), std::declval<WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >())) std::__1::__invoke[abi:v15006]<void IPC::callMemberFunction<WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >&&)::'lambda'(auto&&...), WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >(WebKit::NetworkProcessProxy&&, WebKit::RemoteWorkerType&&, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>&&)
7  com.apple.WebKit        	       0x14784bd5e    decltype(auto) std::__1::__apply_tuple_impl[abi:v15006]<void IPC::callMemberFunction<WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, 0ul, 1ul>(WebKit::NetworkProcessProxy&&, WebKit::NetworkProcessProxy&&, std::__1::__tuple_indices<0ul, 1ul>)
8  com.apple.WebKit        	       0x14784bd0c    decltype(auto) std::__1::apply[abi:v15006]<void IPC::callMemberFunction<WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy&&, WebKit::NetworkProcessProxy&&)
9  com.apple.WebKit        	       0x14784b5d4    void IPC::callMemberFunction<WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> > >(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >&&)
10  com.apple.WebKit        	       0x147830070    void IPC::handleMessage<Messages::NetworkProcessProxy::RemoteWorkerContextConnectionNoLongerNeeded, WebKit::NetworkProcessProxy, WebKit::NetworkProcessProxy, void (WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebKit::RemoteWorkerType, WTF::ObjectIdentifierGeneric<WebCore::ProcessIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>))
11  com.apple.WebKit        	       0x14782d3f4    WebKit::NetworkProcessProxy::didReceiveNetworkProcessProxyMessage(IPC::Connection&, IPC::Decoder&)
12  com.apple.WebKit        	       0x148f2098c    WebKit::NetworkProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
Comment 2 Ryan Haddad 2023-05-03 09:12:58 PDT
ASSERTION FAILED: remoteWorkerProcesses().contains(process)
/Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebKit/UIProcess/WebProcessPool.cpp(602) : void WebKit::WebProcessPool::removeFromRemoteWorkerProcesses(WebKit::WebProcessProxy &)
Comment 3 Chris Dumez 2023-05-03 12:57:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13411
Comment 4 EWS 2023-05-04 13:51:48 PDT
Committed 263693@main (ce9cd2b20a50): <https://commits.webkit.org/263693@main>

Reviewed commits have been landed. Closing PR #13411 and removing active labels.