[ macOS, iOS ] ASSERTION FAILED: remoteWorkerProcesses().contains(process) in WebKit::WebProcessPool::removeFromRemoteWorkerProcesses https://bugs.webkit.org/show_bug.cgi?id=256233 rdar://104915398

Reviewed by Alex Christensen.

I haven't been able to reproduce the assertion hit but I am refactoring the code to
make it unlikely the state gets out of sync between the WebProcessPool and the
WebProcessProxy.

The WebProcessPool used to add the WebProcessProxy to the remoteWorkerProcesses()
HashMap. The removal used to happen both from the WebProcessPool and the
WebProcessProxy, depending on the reason.

The new logic is simplified as the WebProcessProxy is now solely in charge of adding
and removing itself from the map. This should make sure that WebProcessProxy cannot
be running remote workers and yet not be in the WebProcessPool map (like the assertion
suggests).

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::establishRemoteWorkerContextConnectionToNetworkProcess):
(WebKit::WebProcessPool::addRemoteWorkerProcess):
(WebKit::WebProcessPool::removeRemoteWorkerProcess):
(WebKit::WebProcessPool::disconnectProcess):
(WebKit::WebProcessPool::removeFromRemoteWorkerProcesses): Deleted.
* Source/WebKit/UIProcess/WebProcessPool.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::disableRemoteWorkers):
(WebKit::WebProcessProxy::enableRemoteWorkers):

Canonical link: https://commits.webkit.org/263693@main